<?xml version="1.0" encoding="utf-8"?>
<!--suppress AndroidDomInspection -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B3E5FC"
    android:contentDescription="@s"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/act_main_btn_sign_in"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#3F51B5"
        android:text="@string/act_main_btn_signin"
        android:textColor="#FFEBEE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <Button
        android:id="@+id/act_main_btn_register"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#3F51B5"
        android:text="@string/act_main_btn_register"
        android:textColor="#FFEBEE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/act_main_btn_sign_in" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="248dp"
        android:layout_height="143dp"
        android:layout_marginTop="128dp"
        android:contentDescription="@string/act_main_image_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.558"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/storename" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="198dp"
        android:layout_height="209dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/act_main_image_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.544"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:srcCompat="@drawable/storelogo" />

</androidx.constraintlayout.widget.ConstraintLayout>